--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@aws-amplify/api": "^6.1.1",
     "@aws-amplify/api-graphql": "^4.5.1",
     "@aws-amplify/ui-react": "^6.5.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.1.7",
     "@tanstack/react-query": "^5.59.20",
     "aws-amplify": "^6.8.0",
     "formik": "^2.4.6",
